@@ -12,16 +12,6 @@
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
-	<properties>
-		<surefireArgLine>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
-			--add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED
-			--add-opens=java.base/java.math=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED
-			--add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED
-			--add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-			--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED --add-opens=java.sql/java.sql=ALL-UNNAMED
-		</surefireArgLine>
-	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.soot-oss</groupId>
